UI (bgs): fix spacing in hero tier lists

--- a/core/src/css/component/battlegrounds/hero-selection/bgs-hero-selection-overview.component.scss
+++ b/core/src/css/component/battlegrounds/hero-selection/bgs-hero-selection-overview.component.scss
@@ -43,7 +43,7 @@
 
 	bgs-hero-tier:not(:last-child) {
 		border-bottom: 1px solid var(--color-3);
-		padding-bottom: 30px;
+		padding-bottom: 15px;
 		margin-bottom: 10px;
 	}
 }
